--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "scripts": {
     "build": "tsc",
-    "start": "node ./bin/sentinex.js"
+    "start": "node ./bin/sentinex.js",
+    "test": "vitest run"
   },
   "dependencies": {
     "commander": "^10.0.0",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "typescript": "^5.2.0"
+    "@types/node": "^22.10.0",
+    "typescript": "^5.2.0",
+    "vitest": "^2.1.8"
   }
 }
