--- a/templates/policy.yaml
+++ b/templates/policy.yaml
@@ -2,4 +2,17 @@ version: 1
 default: deny
 
 allow:
-  - pattern: ".*"
+  prompts:
+    - ".*"
+  tools:
+    http.fetch:
+      hosts:
+        - "example.com"
+      timeoutMs: 5000
+      maxBytes: 64000
+    fs.read:
+      roots:
+        - "./templates"
+      maxBytes: 64000
+    exec:
+      enabled: false
