--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -6,6 +6,7 @@ approval:
   mode: "prompt"
 llm:
   provider: "mock"
+  fallbackToMock: false
   model: "gpt-4.1-mini"
   baseUrl: "https://api.openai.com/v1"
   apiKeyEnv: "OPENAI_API_KEY"
