--- a/templates/config.yaml
+++ b/templates/config.yaml
@@ -2,6 +2,8 @@ version: 1
 audit:
   enabled: true
   file: ".sentinex/audit.jsonl"
+  maxBytes: 1000000
+  maxFiles: 3
 approval:
   mode: "prompt"
 llm:
