feat(policy): add tool-level deny rules with precedence

--- a/templates/policy.yaml
+++ b/templates/policy.yaml
@@ -3,6 +3,11 @@ default: deny
 
 deny:
   prompts: []
+  tools:
+    http.fetch:
+      hosts: []
+    fs.read:
+      paths: []
 
 allow:
   prompts:
