--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node: ["20", "22"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -15,7 +18,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version: ${{ matrix.node }}
           cache: "npm"
 
       - name: Install
@@ -29,3 +32,7 @@ jobs:
 
       - name: Test
         run: npm test
+
+      - name: Coverage
+        if: matrix.node == '22'
+        run: npm run test:coverage
